--- a/style.css
+++ b/style.css
@@ -4,12 +4,18 @@
 }
 
 body {
+    background-color: #040405;
     color: #FEFEFE;
     font-family: "myFont";
 }
 
 .menu ul{
     text-align: right;
+}
+
+.menu li {
+    display: inline-block; /* allinea orizzontalmente i link della navbar */
+    padding: 0 20px; /* padding a destra di ogni link della navbar */
 }
 
 .menu a {
@@ -40,9 +46,21 @@ body {
     color: #FEFEFE;
 }
 
-.menu li {
-    display: inline-block; /* allinea orizzontalmente i link della navbar */
-    padding: 0 20px; /* padding a destra di ogni link della navbar */
+.menu a.paginaCorrente {
+    color: #FEFEFE;
+    pointer-events: none
+}
+
+.menu a.paginaCorrente::before {
+    Content: "";
+    position: absolute;
+    background-color: #ff3c78;
+    height: 3px;
+    width: 100%;
+    left: 0;
+    bottom: -10px;
+    transition: .3s ease;
+    pointer-events: none
 }
 
 /* .menu a:active {
