--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: myFont;
-    src: url("Assets/MuseoModerno-VariableFont_wght.ttf");
+    src: url("Assets/fonts/MuseoModerno-VariableFont_wght.ttf");
 }
 
 body {
@@ -23,6 +23,9 @@ body {
     text-decoration: none; /* elimina elementi decorativi dei link presenti di default */
     position: relative;
     transition: all .3s ease; /* transizione cambio colore onHover */
+    cursor: pointer;
+    /* font-size: 1vw; */
+    font-size: 1.5vmax;
 }
 
 .menu a::after { /* crea strisce invisibili sotto link */
@@ -35,7 +38,7 @@ body {
     bottom: -10px;
     opacity: 0;
     transition: .3s ease;
-    pointer-events: none /* evita bug che rende la striscia cliccabile */
+    pointer-events: none; /* evita bug che rende la striscia cliccabile */
 }
 
 .menu a:hover::after { /* rende visibile striscia sotto link onHover */
@@ -48,7 +51,6 @@ body {
 
 .menu a.paginaCorrente {
     color: #FEFEFE;
-    pointer-events: none
 }
 
 .menu a.paginaCorrente::before {
@@ -60,7 +62,7 @@ body {
     left: 0;
     bottom: -10px;
     transition: .3s ease;
-    pointer-events: none
+    pointer-events: none;
 }
 
 /* .menu a:active {
