--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     position: relative;
     transition: all .3s ease; /* transizione cambio colore onHover */
     cursor: pointer;
-    /* font-size: 1vw; */
+    user-select: none;
     font-size: 1.5vmax;
 }
 
