--- a/style.css
+++ b/style.css
@@ -3,19 +3,56 @@
     src: url("Assets/fonts/MuseoModerno-VariableFont_wght.ttf");
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: #040405;
     color: #FEFEFE;
     font-family: "myFont";
 }
 
-.menu ul{
+
+
+/* Stile Scrollbar */
+/* Modifica scrollbar su Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: #d52d08 #040405;
+  }
+  
+  /* Modifica scrollbar su Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: #040405;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: #d52d08;
+    border-radius: 20px;
+    border: 3px solid #040405;
+  }
+/* Fine Stile Scrollbar */
+
+
+
+/* Stile Navbar */
+.menu {
+    padding: 10px 0 15px 0;
+}
+
+.menu ul {
     text-align: right;
 }
 
 .menu li {
     display: inline-block; /* allinea orizzontalmente i link della navbar */
-    padding: 0 20px; /* padding a destra di ogni link della navbar */
+    padding: 0 0 0 20px; /* padding a destra di ogni link della navbar */
 }
 
 .menu a {
@@ -25,16 +62,16 @@ body {
     transition: all .3s ease; /* transizione cambio colore onHover */
     cursor: pointer;
     user-select: none;
-    font-size: 1.5vmax;
     -moz-user-select: none; /* firefox specific */
     -webkit-user-select: none; /* Chrome, Opera and Safari*/
     -ms-user-select: none; /* IE, ms-edge */
+    font-size: calc(10px + 1vw);;
 }
 
 .menu a::after { /* crea strisce invisibili sotto link */
     Content: "";
     position: absolute;
-    background-color: #ff3c78;
+    background-color: #d52d08;
     height: 3px;
     width: 100%;
     left: 0;
@@ -59,7 +96,7 @@ body {
 .menu a.paginaCorrente::before {
     Content: "";
     position: absolute;
-    background-color: #ff3c78;
+    background-color: #d52d08;
     height: 3px;
     width: 100%;
     left: 0;
@@ -67,7 +104,4 @@ body {
     transition: .3s ease;
     pointer-events: none;
 }
-
-/* .menu a:active {
-    color: red;
-} */
+/* Fine Stile Navbar */
