--- a/style.css
+++ b/style.css
@@ -109,7 +109,12 @@ body {
 /* Fine Stile Navbar */
 
 .citazioneHomePage {
-    font-size: calc(10px + 0.8vw); font-weight: lighter; background-color: rgb(162, 162, 164, 0.95); position: absolute; border-radius: 20px; padding: 0.3em 0.8em 0.3em 0.8em;
+    font-size: calc(10px + 0.8vw);
+    font-weight: lighter;
+    background-color: #a2a2a4f2;
+    position: absolute;
+    border-radius: 20px;
+    padding: 0.3em 0.8em 0.3em 0.8em;
 }
 
 /* Prima Parte Homepage */
