--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ body {
 .citazioneHomePage {
     font-size: calc(10px + 0.8vw);
     font-weight: lighter;
-    background-color: rgb(162, 162, 164);
+    background-color: rgb(162, 162, 164, 0.95);
     position: absolute;
     border-radius: 20px;
     padding: 0.3em 0.8em 0.3em 0.8em;
