--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav {
     justify-content: center;
     flex-direction: column;
     align-items: end;
-    background-color: red;
+    background-color: #040405;
     display: flex;
     position: fixed;
     top: 0;
