--- a/style.css
+++ b/style.css
@@ -78,6 +78,7 @@ nav a {
     -webkit-user-select: none; /* Chrome, Opera and Safari*/
     -ms-user-select: none; /* IE, ms-edge */
     font-size: calc(10px + 0.8vw);
+    background-color: transparent;
 }
 
 /* nav a:hover, */
@@ -85,21 +86,18 @@ nav a.active {
     color: #FEFEFE;
 }
 
-@media (hover: hover) { /* per evitare bug su dispositivi mobili che lascia la proprietà hover attiva dopo la pressione */
-    nav a:hover::after,
-    nav a.active::before { /* rende visibile striscia sotto link onHover */
-        Content: "";
-        position: absolute;
-        background-color: #d52d08;
-        border-radius: 20px;
-        height: 3px;
-        width: 100%;
-        left: 0;
-        bottom: -5px;
-        transition: .3s ease;
-        pointer-events: none; /* evita bug che rende la striscia cliccabile */
-        -webkit-tap-highlight-color: transparent !important;
-    }
+nav a:hover::after,
+nav a.active::before { /* rende visibile striscia sotto link onHover */
+    Content: "";
+    position: absolute;
+    background-color: #d52d08;
+    border-radius: 20px;
+    height: 3px;
+    width: 100%;
+    left: 0;
+    bottom: -5px;
+    transition: .3s ease;
+    pointer-events: none; /* evita bug che rende la striscia cliccabile */
 }
 /* Fine Stile Navbar */
 
