--- a/style.css
+++ b/style.css
@@ -86,9 +86,8 @@ nav a.active {
     color: #FEFEFE;
 }
 
-@media (hover: hover) {
 nav a:hover::after,
-nav a.hover::before,
+/* nav a.hover::before, */ /*TODO rimuovi o implementa*/
 nav a.active::before { /* rende visibile striscia sotto link onHover */
     Content: "";
     position: absolute;
@@ -100,7 +99,7 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
     bottom: -5px;
     transition: .3s ease;
     pointer-events: none; /* evita bug che rende la striscia cliccabile */
-}}
+}
 /* Fine Stile Navbar */
 
 
