--- a/style.css
+++ b/style.css
@@ -105,6 +105,17 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
 
 
 /* Prima Parte Homepage */
+@media (min-height: 0px) { /* layout testo in devices medi (layout citazione su desktop, meno di 350px in altezza) */
+    .testoHome{
+        padding-top: 0;
+    }
+}
+@media (min-height: 350px) { /* layout testo in devices medi (layout citazione su desktop, più 350px in altezza) */
+    .testoHome{
+        padding-top: 3vh;
+    }
+}
+
 .citazioneHomePage {
     font-size: calc(10px + 0.8vw);
     font-weight: lighter;
@@ -133,3 +144,40 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
     }
 }
 /* Fine Prima Parte Homepage */
+
+
+
+/* Educazione civica */
+.materiaEC {
+    background-color: rgb(32, 34, 37, 0.95);
+    border-radius: 20px;
+    text-align: center;
+    flex: auto;
+    min-width: 300px;
+    transition: .3s ease;
+}
+
+.materiaEC .titoloMateriaEC {
+    font-size: calc(11px + 1.1vw);
+    font-weight: 500;
+    padding-top: 2vh;
+}
+
+.materiaEC .testoMateriaEC {
+    font-size: calc(9px + 0.8vw);
+    padding-bottom: 2vh;
+}
+
+
+
+/* Animazioni */
+.fadeIn {
+    opacity: 0;
+    transform: translate(-5vw, 0vh);
+    transition: .4s all cubic-bezier(.215, .61, .355, .1);
+}
+.fadeIn.mostrato{
+    opacity: 1;
+    transform: translate(0vw, 0vh);
+}
+/* Fine animazioni */
