--- a/style.css
+++ b/style.css
@@ -24,19 +24,19 @@ body {
 
 /* Stile Scrollbar */
 * { /* Modifica scrollbar su Firefox */
-    scrollbar-width: thin;
+    scrollbar-width: 12px;
     scrollbar-color: #d52d08 #040405;
   }
   
-  *::-webkit-scrollbar { /* Modifica scrollbar su Chrome, Edge, and Safari */
+*::-webkit-scrollbar { /* Modifica scrollbar su Chrome, Edge, and Safari */
     width: 12px;
   }
   
-  *::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background: #040405;
   }
   
-  *::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background-color: #d52d08;
     border-radius: 20px;
     border: 3px solid #040405;
