--- a/style.css
+++ b/style.css
@@ -53,13 +53,14 @@ nav {
     flex-direction: column;
     align-items: end;
     background-color: #040405;
+    position: relative;
     display: flex;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     transition: .3s ease;
-    z-index: 10;
+    z-index: 1;
 }
 
 nav ul li {
@@ -156,6 +157,14 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
 }
 /* Fine Prima Parte Homepage */
 
+#fotoRicordi {
+    background-color: #EDE8DD;
+    user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+}
 
 
 /* Educazione civica */
