--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
 #anniPCTO {
     row-gap: calc(10px + 2vh);
     column-gap: calc(10px + 2vw);
-    padding: 0 20px 0 20px;
+    padding: calc(45px + 1vw) 20px 0 20px;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -266,7 +266,7 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
     font-size: calc(11px + 1.5vw);
     font-weight: bold;
     text-align: center;
-    margin-bottom: calc(45px + 1vw);
+    /* margin-bottom: calc(45px + 1vw); */
 }
 /* Fine testi di default */
 
