--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
     font-size: calc(11px + 1.5vw);
     font-weight: bold;
     text-align: center;
-    /* margin-bottom: calc(45px + 1vw); */
+    margin-bottom: calc(11px + 1.5vw);
 }
 /* Fine testi di default */
 
