--- a/style.css
+++ b/style.css
@@ -63,42 +63,32 @@ nav {
     z-index: 1;
 }
 
-nav.light {
-    background-color: #EDE8DD;
-}
-
 nav ul li {
     display: inline-block; /* allinea orizzontalmente i link della navbar */
     padding-left: calc(15px + 1vw); /* padding a sinistra di ogni link della navbar */
 }
 
 nav a {
-    color: #A2A2A4 !important;
+    color: #A2A2A4;
     text-decoration: none; /* elimina elementi decorativi dei link presenti di default */
     position: relative;
-    transition: all .3s ease; /* transizione cambio colore onHover e colore sfondo */
+    transition: all .3s ease; /* transizione cambio colore onHover */
     cursor: pointer;
     user-select: none;
-    -moz-user-select: none; /* firefox */
+    -moz-user-select: none; /* firefox specific */
     -webkit-user-select: none; /* Chrome, Opera and Safari*/
     -ms-user-select: none; /* IE, ms-edge */
     font-size: calc(10px + 0.8vw);
     background-color: transparent;
 }
 
-nav.light a {
-    color: #575758 !important;
-}
-
+/* nav a:hover, */
 nav a.active {
-    color: #FEFEFE !important;
-}
-
-nav.light a.active {
-    color: #040405 !important;
+    color: #FEFEFE;
 }
 
 nav a:hover::after,
+/* nav a.hover::before, */ /*TODO rimuovi o implementa*/
 nav a.active::before { /* rende visibile striscia sotto link onHover */
     Content: "";
     position: absolute;
@@ -116,28 +106,19 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
 
 
 /* Prima Parte Homepage */
-#homeSection {
-    flex-grow: 1;
-    background-image: url(Assets/images/GraffitoViaDellaPace.svg);
-    background-position: bottom right;
-    background-repeat: no-repeat;
-    padding-left: 20px;
-    margin-top: calc(45px + 1vw);
+@media (min-height: 350px) { /* layout testo in devices medi (layout citazione su desktop, più 350px in altezza) */
+    .testoHome{
+        padding-top: 3vh;
+    }
 }
 
 .citazioneHomePage {
     font-size: calc(10px + 0.8vw);
     font-weight: lighter;
-    background-color: rgb(32, 34, 37, 0.95); /* colore con trasparenza del 95% */
+    background-color: rgb(32, 34, 37, 0.95); /* Colore con trasparenza del 95% */
     position: absolute;
     border-radius: 20px;
     padding: 0.5em 1em 0.5em 1em;
-}
-
-@media (min-height: 350px) { /* layout testo in devices medi (layout citazione su desktop, più 350px in altezza) */
-    .testoHome{
-        padding-top: 3vh;
-    }
 }
 
 @media (min-width: 0px) { /* layout citazione in piccoli devices (tablets, 768px e superiori) */
@@ -147,19 +128,19 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
     .testoHome{ /* layout testo in devices medi (layout citazione su desktop, meno di 350px in altezza) */
         padding-top: 0;
     }
-    .materiaEC .titolo_materiaEC { /* serve per sezione educazione civica */
+    .materiaEC .titolo_materiaEC { /* Serve per sezione educazione civica */
         padding: 0 0 3vh 0;
     }
 }
 
 @media (min-width: 768px) {
-    .materiaEC { /* serve per sezione educazione civica */
+    .materiaEC { /* Serve per sezione educazione civica */
         display: flex;
     }
-    .titolo_materiaEC.sinistra { /* serve per sezione educazione civica */
+    .titolo_materiaEC.sinistra { /* Serve per sezione educazione civica */
         padding: 0 5vw 0 0;
     }
-    .titolo_materiaEC.destra { /* serve per sezione educazione civica */
+    .titolo_materiaEC.destra { /* Serve per sezione educazione civica */
         padding: 0 0 0 5vw;
         text-align: end;
     }
@@ -193,7 +174,7 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
 
 /* Educazione civica */
 .materiaEC {
-    margin: 0 20px 10vh 20px;
+    margin-bottom: 10vh;
     padding: calc(10px + 4vh) calc(10px + 4vw) calc(10px + 4vh) calc(10px + 4vw);
     background-color: rgb(32, 34, 37, 0.95);
     border-radius: 20px;
@@ -203,72 +184,25 @@ nav a.active::before { /* rende visibile striscia sotto link onHover */
 
 
 /* PCTO */
-@media (max-width: 900px) {
+@media (min-width: 900px) {
     #anniPCTO {
-        flex-direction: column;
-        align-items: center;
+        grid-template-columns: 1fr 1fr 1fr;
     }
-}
-
-#anniPCTO {
-    row-gap: calc(10px + 2vh);
-    column-gap: calc(10px + 2vw);
-    padding: calc(45px + 1vw) 20px 0 20px;
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
+    .annoPCTO{
+        margin-bottom: 10vh;
+    }
 }
 
 .annoPCTO {
     padding: calc(10px + 2vh) calc(10px + 2vw) calc(10px + 2vh) calc(10px + 2vw);
-    background-color: rgb(218, 214, 201, 0.80);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    margin: calc(8px + 1vw);
+    background-color: rgb(218, 214, 201, 0.95);
     border-radius: 20px; 
     font-weight: 500;
     min-width: 250px;
     max-width: 450px;
-    width: 100%;
-}
-
-.annoPCTO.centrale {
-    margin: calc(10px + 2vh) 0 calc(10px + 2vh);
-}
-
-#relazioneFinalePCTO {
-    margin: calc(45px + 1vw) 20px 10vh 20px;
-    font-weight: 500;
-    padding: calc(10px + 2vh) calc(10px + 2vw) calc(10px + 2vh) calc(10px + 2vw);
-    background: rgba(237, 232, 221, 0.15);
-    border-radius: 20px;
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
-}
-
-.argomentoPCTO {
-    padding: calc(10px + 2vh) calc(10px + 2vw) calc(10px + 2vh) calc(10px + 2vw);
-    background-color: rgb(218, 214, 201, 0.80);
-    border-radius: 20px;
 }
 /* Fine PCTO */
-
-
-
-/* Testi di default */
-.titoloSezione {
-    font-size: calc(13px + 3.5vw);
-    font-weight: bold;
-    text-align: center;
-}
-
-.sottotitoloSezione {
-    font-size: calc(11px + 1.5vw);
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: calc(11px + 1.5vw);
-}
-/* Fine testi di default */
 
 
 
