--- a/style.css
+++ b/style.css
@@ -50,6 +50,10 @@ nav {
     padding: 10px 20px 15px 0;
     height: calc(45px + 1vw);
     justify-content: center;
+    user-select: none; /* rende testo non selezionabile */
+    -moz-user-select: none; /* firefox */
+    -webkit-user-select: none; /* Chrome, Opera and Safari*/
+    -ms-user-select: none; /* IE, ms-edge */
     flex-direction: column;
     align-items: end;
     background-color: #040405;
@@ -78,12 +82,9 @@ nav a {
     position: relative;
     transition: all .3s ease; /* transizione cambio colore onHover e colore sfondo */
     cursor: pointer;
-    user-select: none;
-    -moz-user-select: none; /* firefox */
-    -webkit-user-select: none; /* Chrome, Opera and Safari*/
-    -ms-user-select: none; /* IE, ms-edge */
     font-size: calc(10px + 0.8vw);
     background-color: transparent;
+    -webkit-tap-highlight-color: transparent; /* evita effetto pressione link */
 }
 
 nav.light a {
