--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ nav a.active::before { /* rende visibile striscia sotto link attivo */
 
 /* Educazione civica */
 .materiaEC {
-    margin: 0 20px 10vh 20px;
+    margin-bottom: 10vh;
     padding: calc(10px + 4vh) calc(10px + 4vw) calc(10px + 4vh) calc(10px + 4vw);
     background-color: rgb(32, 34, 37, 0.95);
     border-radius: 20px;
