--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ nav {
     -moz-user-select: none; /* firefox */
     -webkit-user-select: none; /* Chrome, Opera and Safari*/
     -ms-user-select: none; /* IE, ms-edge */
+    pointer-events: none;
     flex-direction: column;
     align-items: end;
     background-color: #040405;
@@ -80,10 +81,7 @@ nav a {
     font-size: calc(10px + 0.8vw);
     background-color: transparent;
     -webkit-tap-highlight-color: transparent; /* evita effetto pressione link */
-    user-select: none; /* rende testo non selezionabile */
-    -moz-user-select: none; /* firefox */
-    -webkit-user-select: none; /* Chrome, Opera and Safari*/
-    -ms-user-select: none; /* IE, ms-edge */
+    pointer-events: auto;
 }
 
 nav.light a {
